--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,7 +53,6 @@ jobs:
                 working_directory: ./frontend
                 command: |
                     npm i 
-                    npm audit fix --audit-level=critical --force
                     npm run build
             - persist_to_workspace:
                 root: .
@@ -76,7 +75,8 @@ jobs:
                 name: Back-end build
                 working_directory: ./backend
                 command: |
-                    npm i && npm run build
+                    npm i
+                    npm run build
             - persist_to_workspace:
                 root: .
                 paths:
@@ -460,4 +460,12 @@ workflows:
     jobs:
       - build-frontend
       - build-backend
+      - test-frontend:
+          requires: [build-frontend]
+      - test-backend:
+          requires: [build-backend]
+      - scan-backend:
+          requires: [build-backend]
+      - scan-frontend:
+          requires: [build-frontend]
 
