--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -77,9 +77,9 @@ jobs:
                 command: |
                     echo "Starting npm i"
                     npm i
-                    echo "npm audit fix --audit-level=critical --force"
+                    echo "Starting npm audit fix --audit-level=critical --force"
                     npm audit fix --audit-level=critical --force
-                    echo "npm run build"
+                    echo "Starting npm run build"
                     npm run build
 
             - persist_to_workspace:
