--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,6 +53,7 @@ jobs:
                 working_directory: ./frontend
                 command: |
                     npm i 
+                    npm update
                     npm run build
             - persist_to_workspace:
                 root: .
@@ -76,6 +77,7 @@ jobs:
                 working_directory: ./backend
                 command: |
                     npm i
+                    npm update
                     npm run build
 
             - persist_to_workspace:
