--- a/.circleci/files/backend.yml
+++ b/.circleci/files/backend.yml
@@ -20,6 +20,9 @@ Resources:
         - IpProtocol: tcp
           FromPort: 3030
           ToPort: 3030
+        - IpProtocol: tcp
+          FromPort: 3000
+          ToPort: 3000          
           CidrIp: 0.0.0.0/0
         - IpProtocol: tcp
           FromPort: 9100
