--- a/.circleci/files/backend.yml
+++ b/.circleci/files/backend.yml
@@ -20,6 +20,7 @@ Resources:
         - IpProtocol: tcp
           FromPort: 3030
           ToPort: 3030
+          CidrIp: 0.0.0.0/0
         - IpProtocol: tcp
           FromPort: 3000
           ToPort: 3000          
