--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -449,7 +449,7 @@ jobs:
                     echo "${CurrentWorkflowID} is the actual workflow"
                     echo "${STACKS}"
 
-                    if [[ "$CurrentWorkflowID" != "$OldWorkflowID" ]] && [[ "" != "$OldWorkflowID" ]]
+                    if [[ "$CurrentWorkflowID" != "$OldWorkflowID" ]]
                     then
                         echo "Deleting Old Version"
                         echo "Attempting to delete s3://udapeople-${OldWorkflowID} bucket"
@@ -465,6 +465,7 @@ jobs:
                 environment:
                     TERM: xterm-256color
 
+#if [[ "$CurrentWorkflowID" != "$OldWorkflowID" ]] && [[ "" != "$OldWorkflowID" ]]
                 
 
 
