--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,8 +15,8 @@ commands:
             when: on_fail                
             command: |
                 echo "Deleting Environment"
-                aws s3 rb s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} --force
-                echo "s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} deleted"
+                aws s3 rm "s3://udapeople-${OldWorkflowID}" --recursive
+                echo "s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} emptied"
                 aws cloudformation delete-stack --stack-name backend-${CIRCLE_WORKFLOW_ID:0:7}
                 echo "backend stack deleted"
                 aws cloudformation delete-stack --stack-name frontend-${CIRCLE_WORKFLOW_ID:0:7}
@@ -452,9 +452,9 @@ jobs:
                     if [[ "$CurrentWorkflowID" != "$OldWorkflowID" ]]
                     then
                         echo "Deleting Old Version"
-                        echo "Attempting to delete s3://udapeople-${OldWorkflowID} bucket"
+                        echo "Attempting to empty s3://udapeople-${OldWorkflowID} bucket"
                         aws s3 rm "s3://udapeople-${OldWorkflowID}" --recursive
-                        echo "s3://udapeople-${OldWorkflowID} bucket deleted"
+                        echo "s3://udapeople-${OldWorkflowID} bucket emptied"
                         aws cloudformation delete-stack --stack-name "frontend-${OldWorkflowID}"
                         echo "frontend-${OldWorkflowID} stack deleted"
                         aws cloudformation delete-stack --stack-name "backend-${OldWorkflowID}"
@@ -464,6 +464,15 @@ jobs:
                     fi
                 environment:
                     TERM: xterm-256color
+            - revert-migrations:
+                workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
+
+            - destroy-environment:
+                workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
+
+
+
+
 
 #if [[ "$CurrentWorkflowID" != "$OldWorkflowID" ]] && [[ "" != "$OldWorkflowID" ]]
                 
