--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ commands:
             when: on_fail                
             command: |
                 echo "Deleting Environment"
-                aws s3 rm "s3://udapeople-${OldWorkflowID}" --recursive
+                aws s3 rm "s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7}" --recursive
                 echo "s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} emptied"
                 aws cloudformation delete-stack --stack-name backend-${CIRCLE_WORKFLOW_ID:0:7}
                 echo "backend stack deleted"
